deployments/telemetry/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telemetry
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: telemetry
  template:
    metadata:
      labels:
        app: telemetry
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - telemetry
              topologyKey: "kubernetes.io/hostname"
      containers:
        - name: core
          image: parity/substrate-telemetry-backend
          command:
            - telemetry_core
            - -l
            - 127.0.0.1:8888
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
            requests:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8888
          securityContext:
            runAsUser: 1000
            readOnlyRootFilesystem: true
        - name: sharding
          image: parity/substrate-telemetry-backend
          command:
            - telemetry_shard
            - -l
            - 127.0.0.1:8001
            - -c
            - http://127.0.0.1:8888/shard_submit
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
            requests:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8001
          securityContext:
            runAsUser: 1000
            readOnlyRootFilesystem: true
        - name: frontend
          image: parity/substrate-telemetry-frontend
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
            requests:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8000
          securityContext:
            runAsUser: 101
            readOnlyRootFilesystem: true
          volumeMounts:
            - mountPath: /var/cache/nginx
              name: nginx-cache
            - mountPath: /var/run
              name: run
            - mountPath: /app/tmp
              name: tmp
      volumes:
        - name: nginx-cache
          emptyDir: {}
        - name: run
          emptyDir: {}
        - name: tmp
          emptyDir: {}
