deployments/telemetry/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: telemetry-frontend
spec:
  type: LoadBalancer
  selector:
    app: telemetry
  ports:
    - port: 8000
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: telemetry-core
  annotations:
    cloud.google.com/backend-config: '{"ports": {"8888":"telemetry-core-bec"}}'
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: LoadBalancer
  selector:
    app: telemetry
  ports:
    - port: 8888
      targetPort: 8888
